# foodSecurityPred

./: .gitignore  README.html  README.md  README.txt  dockerfile  local_test.py  main.py  oldpipeline_deploy.py  pipeline_deploy.py  pyproject.toml
.github/workflows/: deploy.yml
Figures/: Price_data_processing.py  SST.py  clustering.py  desert_locust.py  feature_engineering.py  oldML_execution.py  plots_paper.ipynb
ML_results/: eval_stats_ap.csv  eval_stats_other.csv  eval_stats_p.csv  preds_RUN_FINAL_20_HOA_ap_xgb.xlsx  preds_RUN_FINAL_20_HOA_other_xgb.xlsx  preds_RUN_FINAL_20_HOA_p_xgb.xlsx  raw_model_output_cluster_ap.xlsx  raw_model_output_cluster_other.xlsx  raw_model_output_cluster_p.xlsx  shap_base_values_cluster_ap.xlsx  shap_base_values_cluster_other.xlsx  shap_base_values_cluster_p.xlsx  shap_data_cluster_ap.xlsx  shap_data_cluster_other.xlsx  shap_data_cluster_p.xlsx  shap_values_cluster_ap.xlsx  shap_values_cluster_other.xlsx  shap_values_cluster_p.xlsx  stats_RUN_FINAL_20_HOA_ap_xgb.xlsx  stats_RUN_FINAL_20_HOA_other_xgb.xlsx  stats_RUN_FINAL_20_HOA_p_xgb.xlsx  verif_unit_level_cluster_ap.xlsx  verif_unit_level_cluster_other.xlsx  verif_unit_level_cluster_p.xlsx
README_files/libs/bootstrap/: bootstrap-b9f025fa521194ab51f5de92fbd134be.min.css
src/: FEWS_FSO.py  HP_tuning.py  ML_execution.py  ML_functions.py  __init__.py  input_collector.py  oldHP_tuning.py  oldML_execution.py  oldML_functions.py
