[project]
name = "foodsecuritypred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cartopy>=0.21.0",
    "geopandas>=0.12.0",
    "geoplot>=0.5.1",
    "geopy>=2.4.1",
    "google-cloud>=0.34.0",
    "kfp>=2.15.2",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "netcdf4==1.6.5",
    "numpy<2.0.0",
    "pandas>=1.5.0",
    "pydot>=4.0.1",
    "rasterio>=1.4.4",
    "regionmask>=0.13.0",
    "requests>=2.32.5",
    "rioxarray>=0.19.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "shapely>=2.0.0",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.1",
    "wandb>=0.24.0",
    "xarray>=2023.1.0",
    "xgboost>=1.7.0",
]
