[project]
name = "foodsecuritypred"
version = "0.1.0"
description = "Food security prediction with robust numeric purification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cartopy>=0.21.0",
    "geopandas>=0.12.0",
    "geoplot>=0.5.1",
    "geopy>=2.4.1",
    "google-cloud>=0.34.0",
    "google-cloud-aiplatform>=1.134.0",
    "google-cloud-logging>=3.13.0",
    "kfp>=2.15.2",
    "mapclassify>=2.10.0",
    "matplotlib>=3.8.0",
    "netcdf4==1.6.5",
    "numpy>=1.24.0,<2.0.0",   # ✅ Strictly < 2.0.0 for SHAP/XGBoost stability
    "openpyxl>=3.1.5",
    "pandas>=2.1.0",           # ✅ Upgrade: Essential for fixing the 'Object' view/copy bugs
    "pydot>=1.4.2",
    "rasterio>=1.4.4",
    "regionmask>=0.13.0",
    "requests>=2.32.5",
    "rioxarray>=0.19.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",           # Adjusted for Python 3.11 compatibility
    "seaborn>=0.13.2",
    "shap>=0.44.0",            # ✅ Modern SHAP for better Pandas 2.x support
    "shapely>=2.0.0",
    "statsmodels>=0.14.0",
    "tqdm>=4.67.1",
    "wandb>=0.24.0",
    "xarray>=2023.9.0",
    "xgboost>=2.0.0",          # ✅ Upgrade: Better Arrow-to-NumPy and string handling
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]